# rust3d

./: .gitignore  CHAT_FIX_SUMMARY.md  Cargo.toml  D2R_IMPROVEMENTS.md  GAME_FLOW_SUMMARY.md  LEADERBOARD_IMPLEMENTATION.md  README_REFACTORING.md  REFACTORING_PLAN.md  REFACTORING_STEPS.md  TURSO_SETUP_GUIDE.md  extreme_bevy-e07a86b10a50f4e9.js  index.html  schema.sql
assets/shaders/: aura.wgsl  aura2.wgsl  fire.wgsl  lightning2.wgsl  poison.wgsl  rainbow.wgsl
backend/: README.md  worker.js  wrangler.toml
examples/might/src/: main.rs  map.rs
examples/might/src/materials/: aura.rs  mod.rs
examples/might/src/resources/: mod.rs
examples/might/src/systems/: camera.rs  environment.rs  (+4 more)
src/: animation.rs  auth.rs  auth_ui.rs  camera.rs  chat.rs  chat_ui.rs  collisions.rs  combat.rs  hud_system.rs  input.rs  inventory_system.rs  lib.rs  lobby.rs  main.rs  main.rs.bak  map.rs  matchmaking.rs  networking.rs  player.rs  resources.rs  setup.rs  states.rs
src/core/: constants.rs  mod.rs  resources.rs  states.rs
src/entities/: bullet.rs  components.rs  mod.rs
src/game/: animation.rs  camera.rs  cleanup.rs  combat.rs  damage_numbers.rs  input.rs  leaderboard.rs  mod.rs  player.rs  round.rs
src/materials/: aura.rs  mod.rs
src/network/: matchmaking.rs  mod.rs
src/systems/: aura_effects.rs  mod.rs
src/ui/: game_end.rs  hud.rs  inventory.rs  leaderboard.rs  lobby.rs  mod.rs  score.rs  skills.rs
src/ui/auth/: mod.rs  ui.rs
src/ui/chat/: mod.rs  network.rs  ui.rs
src/utils/: checksum.rs  helpers.rs  mod.rs  setup.rs
src/world/: collisions.rs  map.rs  mod.rs
