[package]
name = "extreme_bevy"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
bevy = { version = "0.17", features = ["jpeg", "bevy_gltf"] }
bevy_ggrs = { version = "0.19", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.13", features = ["ggrs"] }
bevy_asset_loader = "0.24.0-RC"
clap = { version = "4.5", features = ["derive"] }
bevy_roll_safe = "0.6"
bevy_egui = "0.38"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand_xoshiro = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# NEW: WASM and Kasware dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "console",
]

[profile.release]
opt-level = 'z'
lto = true

[lib]
crate-type = ["cdylib", "rlib"]